--- a/index.html
+++ b/index.html
@@ -134,82 +134,71 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <a href="zone7.html" target="_blank" class="swiper--link">
+                  <a href="#" data-zone="zone7.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_01.jpg" alt="" /></div>
                     <h3 class="title">장충동</h3>
                     <p class="desc">우리가 몰랐던 리얼 <span>장충</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone5.html" target="_blank" class="swiper--link">
+                  <a href="zone5.html" data-zone="zone5.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_02.jpg" alt="" /></div>
                     <h3 class="title">필동</h3>
                     <p class="desc"><span>필</span>름처럼 새겨지는 감성<span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone2.html" target="_blank" class="swiper--link">
+                  <a href="zone2.html" data-zone="zone2.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_03.jpg" alt="" /></div>
-
                     <h3 class="title">을지로</h3>
                     <p class="desc">옛것<span>을</span> <span>지</span>금으<span>로</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone8.html" target="_blank" class="swiper--link">
+                  <a href="zone8.html" data-zone="zone8.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_04.jpg" alt="" /></div>
-
                     <h3 class="title">회현동</h3>
                     <p class="desc">기<span>회</span>를 <span>현</span>재로 일구어낸 동네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone1.html" target="_blank" class="swiper--link">
+                  <a href="#" data-zone="zone1.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_05.jpg" alt="" /></div>
-
                     <h3 class="title">신당동</h3>
                     <p class="desc"><span>신</span>묘하게 힙하<span>당</span> 힙당동</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone6.html" target="_blank" class="swiper--link">
+                  <a href="zone6.html" data-zone="zone6.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_06.jpg" alt="" /></div>
-
                     <h3 class="title">소공동</h3>
                     <p class="desc">서울<span>소</span>울 피어나는 성<span>공</span>로드</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone4.html" target="_blank" class="swiper--link">
+                  <a href="zone4.html" data-zone="zone4.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_07.jpg" alt="" /></div>
-
                     <h3 class="title">명동</h3>
                     <p class="desc"><span>명</span>성답게 빛나는 <span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone3.html" target="_blank" class="swiper--link">
+                  <a href="zone3.html" data-zone="zone3.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_08.jpg" alt="" /></div>
-
                     <h3 class="title">중림동</h3>
                     <p class="desc">소<span>중</span>히 마음에 담는 그<span>림</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone9.html" target="_blank" class="swiper--link">
+                  <a href="zone9.html" data-zone="zone9.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_09.jpg" alt="" /></div>
-
                     <h3 class="title">광희동</h3>
                     <p class="desc">세계가 열<span>광</span>하는 환<span>희</span>의 빛</p>
                   </a>
                 </div>
               </div>
-              <!-- <div class="swiper-pagination"></div> -->
-
               <div class="swiper-button-prev btn prev"></div>
               <div class="swiper-button-next btn next"></div>
-
-              <!-- <div class="swiper-scrollbar"></div> -->
             </div>
           </div>
         </section>
@@ -218,11 +207,11 @@
           <div class="img--block">
             <img src="./assets/img/bg4.jpg" alt="" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="" style="top: 0%; height: 20%; left: 50%; width: 45.4%">
+          <div class="link-pin" aria-label="" style="top: 0%; height: 20%; left: 50%; width: 45.4%">
             <div class="img--block">
               <img src="./assets/img/deco/sec4_deco_01.gif" alt="" />
             </div>
-          </a>
+          </div>
           <a class="link-pin" href="#link1" aria-label="" style="top: 22.3%; height: 18.4%; left: 27.3%; width: 26%">
             <div class="img--block"></div>
           </a>
@@ -234,7 +223,7 @@
           <div class="img--block">
             <img src="./assets/img/bg5.jpg" alt="" />
           </div>
-          <div class="link-pin" href="#link1" aria-label="" style="top: 18.5%; height: 31%; left: 50%; width: 56%">
+          <div class="link-pin" aria-label="" style="top: 18.5%; height: 31%; left: 50%; width: 56%">
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -259,18 +248,15 @@
                   </a>
                 </div>
               </div>
-              <!-- <div class="swiper-pagination"></div> -->
-
-              <!-- <div class="swiper-scrollbar"></div> -->
             </div>
             <div class="swiper-button-prev btn prev"></div>
             <div class="swiper-button-next btn next"></div>
           </div>
-          <a class="link-pin" href="#link1" aria-label="ball03" style="top: 40%; height: 8%; left: 94%; width: 19%">
+          <div class="link-pin" aria-label="ball03" style="top: 40%; height: 8%; left: 94%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
             </div>
-          </a>
+          </div>
         </section>
         <section class="sec6">
           <div class="img--block">
@@ -278,42 +264,147 @@
           </div>
         </section>
       </div>
+      <div id="layerWrap" class="layer-wrap">
+        <div class="layer-content"></div>
+      </div>
     </main>
     <script>
+      //   document.addEventListener("DOMContentLoaded", () => {
+      //     document.querySelectorAll(".open-zone").forEach((link) => {
+      //       link.addEventListener("click", function (e) {
+      //         e.preventDefault();
+
+      //         const zoneFile = this.dataset.zone;
+
+      //         fetch(zoneFile)
+      //           .then((res) => res.text())
+      //           .then((html) => {
+      //             document.querySelector(".layer-content").innerHTML = html;
+
+      //             const layer = document.getElementById("layerWrap");
+      //             layer.style.display = "flex";
+      //             layer.classList.add("active"); // ← fade-in 효과
+      //           });
+      //       });
+      //     });
+
+      //     document.getElementById("layerWrap").addEventListener("click", function (e) {
+      //       if (e.target.id === "closeLayer") {
+      //         const layer = document.getElementById("layerWrap");
+      //         layer.classList.remove("active");
+      //         setTimeout(() => {
+      //           layer.style.display = "none";
+      //         }, 300);
+      //       }
+      //     });
+
+      //     const dropdown = document.querySelector(".lang-dropdown");
+      //     const currentLang = document.querySelector(".current-lang");
+
+      //     if (dropdown && currentLang) {
+      //       document.querySelectorAll(".lang-dropdown li").forEach((item) => {
+      //         item.addEventListener("click", () => {
+      //           currentLang.textContent = item.textContent;
+      //           dropdown.style.display = "none";
+      //         });
+      //       });
+
+      //       document.addEventListener("click", (e) => {
+      //         if (!e.target.closest(".lang-wrap")) {
+      //           dropdown.style.display = "none";
+      //         }
+      //       });
+      //     }
+
+      //     const swipersec3 = new Swiper(".sec3 .swiper", {
+      //       loop: true,
+      //       observer: true,
+      //       observeParents: true,
+      //       pagination: { el: ".swiper-pagination" },
+      //       navigation: { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
+      //       scrollbar: { el: ".swiper-scrollbar" },
+      //       breakpoints: {
+      //         1024: { slidesPerView: 3, grid: { rows: 3 }, spaceBetween: 10, enabled: false },
+      //         576: { slidesPerView: 3, spaceBetween: 5, enabled: true },
+      //         0: { slidesPerView: 1.5, spaceBetween: 5, centeredSlides: true, enabled: true },
+      //       },
+      //     });
+
+      //     const swipersec5 = new Swiper(".sec5 .swiper", {
+      //       loop: true,
+      //       pagination: { el: ".swiper-pagination" },
+      //       navigation: { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
+      //       scrollbar: { el: ".swiper-scrollbar" },
+      //     });
+
+      //     window.addEventListener("resize", () => {
+      //       swipersec3.update();
+      //     });
+      //   });
+
+      //   document.getElementById("layerWrap").addEventListener("click", function (e) {
+      //     const layer = document.getElementById("layerWrap");
+
+      //     if (e.target.id === "closeLayer") {
+      //       layer.classList.remove("active");
+      //       setTimeout(() => (layer.style.display = "none"), 300);
+      //       return;
+      //     }
+
+      //     if (!e.target.closest(".layer-content")) {
+      //       layer.classList.remove("active");
+      //       setTimeout(() => (layer.style.display = "none"), 300);
+      //     }
+      //   });
+
       document.addEventListener("DOMContentLoaded", () => {
-        // const stickySvg = document.querySelector(".close_ic img");
-        // const sec1 = document.querySelector(".sec1");
+        document.querySelectorAll(".open-zone").forEach((link) => {
+          link.addEventListener("click", function (e) {
+            e.preventDefault(); // 링크 이동 방지
 
-        // const observer = new IntersectionObserver(
-        //   (entries) => {
-        //     entries.forEach((entry) => {
-        //       if (entry.isIntersecting) {
-        //         // sec1 안에 있을 때 (원래 색)
-        //         stickySvg.style.filter = "invert(0)"; // 검정 유지
-        //       } else {
-        //         // sec1 벗어날 때 (색 변경)
-        //         stickySvg.style.filter = "invert(1)"; // 흰색처럼 표현
-        //       }
-        //     });
-        //   },
-        //   { threshold: 0 }
-        // );
+            const zoneFile = this.dataset.zone;
 
-        // observer.observe(sec1);
+            fetch(zoneFile)
+              .then((res) => res.text())
+              .then((html) => {
+                document.querySelector(".layer-content").innerHTML = html;
+                document.getElementById("layerWrap").style.display = "flex";
+              });
+          });
+        });
+
+        // 2) zone 내부의 닫기 버튼 처리 (이벤트 위임)
+        document.getElementById("layerWrap").addEventListener("click", function (e) {
+          if (e.target.id === "closeLayer") {
+            this.style.display = "none";
+          }
+        });
+        const langWrap = document.querySelector(".lang-wrap");
         const langSelect = document.querySelector(".lang-select");
-        const dropdown = document.querySelector(".lang-dropdown");
         const currentLang = document.querySelector(".current-lang");
+        const dropdown = document.querySelector(".lang-dropdown");
 
-        langSelect.addEventListener("click", () => {
+        // 1) 버튼 클릭 시 열기 / 닫기
+        langSelect.addEventListener("click", (e) => {
+          e.stopPropagation(); // 바깥 클릭 이벤트와 충돌 방지
+
           dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
         });
 
-        // 언어 선택
-        document.querySelectorAll(".lang-dropdown li").forEach((item) => {
-          item.addEventListener("click", () => {
+        // 2) 언어 선택
+        dropdown.querySelectorAll("li").forEach((item) => {
+          item.addEventListener("click", (e) => {
+            e.stopPropagation();
             currentLang.textContent = item.textContent;
             dropdown.style.display = "none";
           });
+        });
+
+        // 3) 바깥 클릭 시 닫기
+        document.addEventListener("click", (e) => {
+          if (!langWrap.contains(e.target)) {
+            dropdown.style.display = "none";
+          }
         });
 
         // 바깥 클릭 시 닫기
@@ -383,10 +474,6 @@
             el: ".swiper-scrollbar",
           },
         });
-      });
-
-      window.addEventListener("resize", () => {
-        swipersec3.update();
       });
     </script>
   </body>
