--- a/zone2.html
+++ b/zone2.html
@@ -16,7 +16,7 @@
           <div class="img--block">
             <img src="/assets/img/zone2_img/sec1_main_img.png" alt="" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
+          <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
@@ -58,7 +58,7 @@
         <div class="close--btn">
           <div class="img--block">
             <img src="assets/img/zone2_img/close_img.png" alt="닫기" />
-            <a class="link-pin close--link" href="/index.html" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+            <a class="link-pin close--link" id="closeLayer" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
           </div>
         </div>
       </div>
