--- a/zone6.html
+++ b/zone6.html
@@ -15,7 +15,7 @@
           <div class="img--block">
             <img src="/assets/img/zone6_img/sec1_main_img.png" alt="서울소울 피어나는 성공로드" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
@@ -58,7 +58,7 @@
           <div class="img--block">
             <img src="/assets/img/zone6_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" id="closeLayer" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
