--- a/zone5.html
+++ b/zone5.html
@@ -15,7 +15,7 @@
           <div class="img--block">
             <img src="/assets/img/zone5_img/sec1_main_img.png" alt="필름처럼 새겨지는 감성동네" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
+          <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
@@ -58,7 +58,7 @@
           <div class="img--block">
             <img src="assets/img/zone5_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" id="closeLayer" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
