--- a/zone3.html
+++ b/zone3.html
@@ -13,50 +13,50 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec1_main_img.png" alt="소중히 마음에 담는그림" />
+            <img src="./assets/img/zone3_img/sec1_main_img.png" alt="소중히 마음에 담는그림" />
           </div>
           <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec2_img01.png" alt="중림동 플레이맵 코스소개" />
+            <img src="./assets/img/zone3_img/sec2_img01.png" alt="중림동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone3_img/sec2_main_img.png" alt="종교를 초월한 우리의 역사 짧은 순례길 탐방" />
+            <img src="./assets/img/zone3_img/sec2_main_img.png" alt="종교를 초월한 우리의 역사 짧은 순례길 탐방" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FQyFFDQp" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec3_main_img.png" alt="오랜 역사 위에 새로움을 입고 기품있게 태어난 동네" />
+            <img src="./assets/img/zone3_img/sec3_main_img.png" alt="오랜 역사 위에 새로움을 입고 기품있게 태어난 동네" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/GwSQQZsx" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec4_main_img.png" alt="이토록 매력적인 '중림+만리' 1박 2일" />
+            <img src="./assets/img/zone3_img/sec4_main_img.png" alt="이토록 매력적인 '중림+만리' 1박 2일" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FLeggZ7Y" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec5_main_img.png" alt="과거와 현재가 어우러지는 하루 반나절의 타임슬립" />
+            <img src="./assets/img/zone3_img/sec5_main_img.png" alt="과거와 현재가 어우러지는 하루 반나절의 타임슬립" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/GUmNNBIs" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec6_main_img.png" alt="어떤 드라마라도 착붙 배경이 된다" />
+            <img src="./assets/img/zone3_img/sec6_main_img.png" alt="어떤 드라마라도 착붙 배경이 된다" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/F2nDD3bH" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/close_img.png" alt="닫기" />
+            <img src="./assets/img/zone3_img/close_img.png" alt="닫기" />
           </div>
           <a class="link-pin close--link" id="closeLayer" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
