--- a/zone5.html
+++ b/zone5.html
@@ -13,50 +13,50 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone5_img/sec1_main_img.png" alt="필름처럼 새겨지는 감성동네" />
+            <img src="./assets/img/zone5_img/sec1_main_img.png" alt="필름처럼 새겨지는 감성동네" />
           </div>
           <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone5_img/sec2_img01.png" alt="필동 플레이맵 코스소개" />
+            <img src="./assets/img/zone5_img/sec2_img01.png" alt="필동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone5_img/sec2_main_img.png" alt="1392에서 2394까지 천 년을 넘나드는 시간 여행" />
+            <img src="./assets/img/zone5_img/sec2_main_img.png" alt="1392에서 2394까지 천 년을 넘나드는 시간 여행" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/GkU1b7Lp" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone5_img/sec3_main_img.png" alt="풍류와 낭만을 아는 'Feel동' 힙스터" />
+            <img src="./assets/img/zone5_img/sec3_main_img.png" alt="풍류와 낭만을 아는 'Feel동' 힙스터" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FSSsWPSf" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone5_img/sec4_main_img.png" alt="나도 잘 몰랐던 나를 위한 취향의 발견" />
+            <img src="./assets/img/zone5_img/sec4_main_img.png" alt="나도 잘 몰랐던 나를 위한 취향의 발견" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/5wNs7kmA" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone5_img/sec5_main_img.png" alt="필동 비기너를 위한 필수 추천 코스" />
+            <img src="./assets/img/zone5_img/sec5_main_img.png" alt="필동 비기너를 위한 필수 추천 코스" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FdoZzH3i" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone5_img/sec6_main_img.png" alt="붓 대신 스마트폰 들고 필동의 하루를 담는다" />
+            <img src="./assets/img/zone5_img/sec6_main_img.png" alt="붓 대신 스마트폰 들고 필동의 하루를 담는다" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/xoQWfJBZ" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone5_img/close_img.png" alt="닫기" />
+            <img src="./assets/img/zone5_img/close_img.png" alt="닫기" />
           </div>
           <a class="link-pin close--link" id="closeLayer" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
