--- a/zone9.html
+++ b/zone9.html
@@ -13,50 +13,50 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec1_main_img.png" alt="세계가 열광하는 환희의빛" />
+            <img src="./assets/img/zone9_img/sec1_main_img.png" alt="세계가 열광하는 환희의빛" />
           </div>
           <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec2_img01.png" alt="광희동 플레이맵 코스소개" />
+            <img src="./assets/img/zone9_img/sec2_img01.png" alt="광희동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone9_img/sec2_main_img.png" alt="DDP만 랜드마크가 아니라고! 지금 주목해야 할 공간들" />
+            <img src="./assets/img/zone9_img/sec2_main_img.png" alt="DDP만 랜드마크가 아니라고! 지금 주목해야 할 공간들" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/IxK6uvsl" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec3_main_img.png" alt="서울에서 가장 알찬 K-패션 쇼핑의 성지" />
+            <img src="./assets/img/zone9_img/sec3_main_img.png" alt="서울에서 가장 알찬 K-패션 쇼핑의 성지" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/xrC9WK2V" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec4_main_img.png" alt="중앙아시아를 오롯이 품은 당찬 골목 탐험" />
+            <img src="./assets/img/zone9_img/sec4_main_img.png" alt="중앙아시아를 오롯이 품은 당찬 골목 탐험" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/xAAEELhF" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec5_main_img.png" alt="맛잘알 단골들의 참새방앗간 인현시장 투어" />
+            <img src="./assets/img/zone9_img/sec5_main_img.png" alt="맛잘알 단골들의 참새방앗간 인현시장 투어" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FivttFWL" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec6_main_img.png" alt="아침부터 저녁까지 광희동에서의 꽉찬 하루" />
+            <img src="./assets/img/zone9_img/sec6_main_img.png" alt="아침부터 저녁까지 광희동에서의 꽉찬 하루" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FivttFWL" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/close_img.png" alt="닫기" />
+            <img src="./assets/img/zone9_img/close_img.png" alt="닫기" />
           </div>
           <a class="link-pin close--link" id="closeLayer" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
