--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone5.html" data-zone="zone5.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone5.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_02.jpg" alt="" /></div>
                     <h3 class="title">필동</h3>
                     <p class="desc"><span>필</span>름처럼 새겨지는 감성<span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone2.html" data-zone="zone2.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone2.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_03.jpg" alt="" /></div>
                     <h3 class="title">을지로</h3>
                     <p class="desc">옛것<span>을</span> <span>지</span>금으<span>로</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone8.html" data-zone="zone8.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone8.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_04.jpg" alt="" /></div>
                     <h3 class="title">회현동</h3>
                     <p class="desc">기<span>회</span>를 <span>현</span>재로 일구어낸 동네</p>
@@ -169,28 +169,28 @@
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone6.html" data-zone="zone6.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone6.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_06.jpg" alt="" /></div>
                     <h3 class="title">소공동</h3>
                     <p class="desc">서울<span>소</span>울 피어나는 성<span>공</span>로드</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone4.html" data-zone="zone4.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone4.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_07.jpg" alt="" /></div>
                     <h3 class="title">명동</h3>
                     <p class="desc"><span>명</span>성답게 빛나는 <span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone3.html" data-zone="zone3.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone3.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_08.jpg" alt="" /></div>
                     <h3 class="title">중림동</h3>
                     <p class="desc">소<span>중</span>히 마음에 담는 그<span>림</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
-                  <a href="zone9.html" data-zone="zone9.html" class="swiper--link open-zone">
+                  <a href="#" data-zone="zone9.html" class="swiper--link open-zone">
                     <div class="img--block"><img src="./assets/img/place/img_place_09.jpg" alt="" /></div>
                     <h3 class="title">광희동</h3>
                     <p class="desc">세계가 열<span>광</span>하는 환<span>희</span>의 빛</p>
