--- a/zone4.html
+++ b/zone4.html
@@ -13,7 +13,7 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="./assets/img/zone4_img/sec1_main_img.png" alt="명성답게 빛나는 동네" />
+            <img src="assets/img/zone4_img/sec1_main_img.png" alt="명성답게 빛나는 동네" />
           </div>
           <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
@@ -21,11 +21,11 @@
         <div class="sec2">
           <span class="blind">즐겨라! 명동에 처음 온 관광객처럼</span>
           <div class="img--block">
-            <img src="./assets/img/zone4_img/sec2_img01.png" alt="명동 플레이맵 코스소개" />
+            <img src="assets/img/zone4_img/sec2_img01.png" alt="명동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="./assets/img/zone4_img/sec2_main_img.png" alt="즐겨라! 명동에 처음 온 관광객처럼" />
+            <img src="assets/img/zone4_img/sec2_main_img.png" alt="즐겨라! 명동에 처음 온 관광객처럼" />
           </div>
 
           <a class="link-pin" target="_blank" href="https://naver.me/xOdqMXz7" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
@@ -34,7 +34,7 @@
         <div class="sec3">
           <span class="blind">외국인 친구에게 강력 추천하는 명동 코스</span>
           <div class="img--block">
-            <img src="./assets/img/zone4_img/sec3_main_img.png" alt="외국인 친구에게 강력 추천하는 명동 코스" />
+            <img src="assets/img/zone4_img/sec3_main_img.png" alt="외국인 친구에게 강력 추천하는 명동 코스" />
           </div>
 
           <a class="link-pin" target="_blank" href="https://naver.me/FGEjn1yN" aria-label="" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
@@ -43,7 +43,7 @@
           <span class="blind">상상동 못 할걸 재미로에 숨은 재미</span>
 
           <div class="img--block">
-            <img src="./assets/img/zone4_img/sec4_main_img.png" alt="상상동 못 할걸 재미로에 숨은 재미" />
+            <img src="assets/img/zone4_img/sec4_main_img.png" alt="상상동 못 할걸 재미로에 숨은 재미" />
           </div>
 
           <a class="link-pin" target="_blank" href="https://naver.me/FK0DXtFi" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
@@ -51,14 +51,14 @@
         <div class="sec5">
           <span class="blind">크리스마스 대표 명소 빛나는 명동을 즐기자</span>
           <div class="img--block">
-            <img src="./assets/img/zone4_img/sec5_main_img.png" alt="크리스마스 대표 명소 빛나는 명동을 즐기자" />
+            <img src="assets/img/zone4_img/sec5_main_img.png" alt="크리스마스 대표 명소 빛나는 명동을 즐기자" />
           </div>
 
           <a class="link-pin" target="_blank" href="https://naver.me/FMTBsl3m" aria-label="코스 확인하기" style="top: 92.3%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="./assets/img/zone4_img/close_img.png" alt="닫기" />
+            <img src="assets/img/zone4_img/close_img.png" alt="닫기" />
           </div>
           <a class="link-pin close--link" id="closeLayer" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
