--- a/zone7.html
+++ b/zone7.html
@@ -13,7 +13,7 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec1_main_img.png" alt="우리가 몰랐던 리얼장충" />
+            <img src="assets/img/zone7_img/sec1_main_img.png" alt="우리가 몰랐던 리얼장충" />
           </div>
           <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%">
             <span class="blind">닫기</span>
@@ -22,49 +22,49 @@
 
         <div class="sec2">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec2_img01.png" alt="장충동 플레이맵 코스소개" />
+            <img src="assets/img/zone7_img/sec2_img01.png" alt="장충동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="./assets/img/zone7_img/sec2_main_img.png" alt="헌신의 자취를 따라 걷는 충절로드" />
+            <img src="assets/img/zone7_img/sec2_main_img.png" alt="헌신의 자취를 따라 걷는 충절로드" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FIN5KpjE" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec3_main_img.png" alt="장충동의 진짜 매력과 만나고 싶다면" />
+            <img src="assets/img/zone7_img/sec3_main_img.png" alt="장충동의 진짜 매력과 만나고 싶다면" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/G1mWjIj9" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec4_main_img.png" alt="장충동을 핫하게 즐기는 한 끗 다른 방법" />
+            <img src="assets/img/zone7_img/sec4_main_img.png" alt="장충동을 핫하게 즐기는 한 끗 다른 방법" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/G9pZchIA" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec5_main_img.png" alt="오감을 깨우는 다산성곽길 바이브" />
+            <img src="assets/img/zone7_img/sec5_main_img.png" alt="오감을 깨우는 다산성곽길 바이브" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/GUmYpLID" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec6_main_img.png" alt="장충동에 왔다면 이 정도는 걸어야 기본!" />
+            <img src="assets/img/zone7_img/sec6_main_img.png" alt="장충동에 왔다면 이 정도는 걸어야 기본!" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/Gyp6SXTh" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec7">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/sec7_main_img.png" alt="장충동의 반전 매력 다이내믹 골목 투어" />
+            <img src="assets/img/zone7_img/sec7_main_img.png" alt="장충동의 반전 매력 다이내믹 골목 투어" />
           </div>
           <a class="link-pin" target="_blank" href="https://naver.me/FwjvuNWW" aria-label="코스 확인하기" style="top: 92%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="./assets/img/zone7_img/close_img.png" alt="닫기" />
+            <img src="assets/img/zone7_img/close_img.png" alt="닫기" />
           </div>
           <a class="link-pin close--link" id="closeLayer" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
