--- a/zone9.html
+++ b/zone9.html
@@ -46,7 +46,7 @@
           <div class="img--block">
             <img src="assets/img/zone9_img/sec5_main_img.png" alt="맛잘알 단골들의 참새방앗간 인현시장 투어" />
           </div>
-          <a class="link-pin" target="_blank" href="https://naver.me/FivttFWL" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xYvtqBNe" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
